--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "apollo-server": "^3.5.0",
     "graphql": "^16.0.1",
+    "lodash": "^4.17.21",
     "nodemon": "^2.0.15"
   }
 }
